ast.c: AST.of checks if a given method object is defined in C

[Bug #18178]